# promptlab

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  keys.js  styles.css
frontend/src/components/: ComparisonSummary.jsx  ProviderIcon.jsx  ResultCards.jsx  RunCard.jsx
frontend/src/pages/: Experiments.jsx  History.jsx  Settings.jsx
src/promptlab/: __init__.py  api.py  catalog.py  cli.py  config.py  judge.py  keystore.py  llm.py  metrics.py  pricing.py  runner.py  schemas.py  scoring.py  store.py
tests/: test_metrics.py  test_pipeline.py
