[project]
name = "promptlab"
version = "0.1.0"
description = "A platform for systematically designing, comparing, evaluating, and versioning prompts across multiple LLMs — LLM-judge, BLEU/ROUGE, latency, tokens, and cost side by side."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sivia" }]
keywords = ["prompt-engineering", "llm", "evaluation", "llm-as-judge", "experiment-tracking"]

dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "openai>=1.30",          # also drives Groq and Gemini via their OpenAI-compatible endpoints
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",           # FastAPI TestClient
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
promptlab = "promptlab.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/promptlab"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PT"]
# E501: line length handled by the formatter.
# B008: calling typer.Option()/Depends() in defaults is the idiomatic pattern.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "llm: tests that make a real LLM call (skipped unless an API key is set)",
]

[tool.mypy]
python_version = "3.10"
packages = ["promptlab"]
ignore_missing_imports = true
warn_unused_ignores = true
